# GenMC_stable

./: Pseudo_Code_C++  README.md  Rule_File_example.txt
BuildTest/: CMakeLists.txt
BuildTest/src/: algo0.cpp  algo0.h  algo1.cpp  algo1.h  algo2.cpp  algo2.h  algo3.cpp  algo3.h  algo4.cpp  algo4.h  algo_m2.cpp  algo_m2.h  main.cpp  rule.cpp  rule.h  run_sim.cpp  run_sim.h  running_stat.cpp  running_stat.h  session.cpp  session.h  sim_cell.cpp  sim_cell.h  utils.cpp  utils.h
GMC_Run/: GMC_Run.sln  GMC_Run.vcxproj  algo1.cpp  algo1.h  algo2.cpp  algo2.h  algo3.cpp  algo3.h  algo4.cpp  algo4.h  main.cpp  rule.h  run_sim.cpp  run_sim.h  running_stat.cpp  running_stat.h  session.cpp  session.h  sim_cell.cpp  utils.cpp  utils.h
GMC_Run/GMC_Run/: GMC_Run.vcxproj  algo2.cpp  function_test.cpp  function_test.h  main.cpp  monte_carlo.cpp  monte_carlo.h  rule.cpp  run_sim.h  running_stat.cpp  running_stat.h  sim_cell.h  sro.cpp  sro.h
GMC_Run/genmc/genmc.xcodeproj/: project.pbxproj
GMC_Run/genmc/genmc.xcodeproj/project.xcworkspace/xcuserdata/tianyu.xcuserdatad/: UserInterfaceState.xcuserstate
GMC_Run/gmc_copy/gmc_copy.xcodeproj/: project.pbxproj
GMC_Run/gmc_copy/gmc_copy.xcodeproj/project.xcworkspace/xcuserdata/tianyu.xcuserdatad/: UserInterfaceState.xcuserstate
GMC_Run/gmc_copy/gmc_copy.xcodeproj/xcuserdata/tianyu.xcuserdatad/xcschemes/: xcschememanagement.plist
GenMC_Fit/: POSCAR  Pseudo_Code  cefit.py  cluster_NiMnIn  cluster_in  clusters_FCC  count.py  lat.in  main.py  param_in  parse.py  sym_out
GenMC_Preprocess/: Pseudocode  compile_vasp_data.py  mag_distrib.py  main.py  param_in
Input_example/: INPUT  POSCAR  Rule_file.in
MC_example/: CLUSTERS  INPUT  POSCAR  SPIN_STATES
(+2 files in other folders)
